--- a/MVCiti24/Views/Shared/_Layout.cshtml
+++ b/MVCiti24/Views/Shared/_Layout.cshtml
@@ -35,6 +35,40 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="AllCourses">Courses</a>
                         </li>
+
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item ms-auto">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignOut">SignOut</a>
+                            </li>
+
+                            <li class="nav-item ms-auto">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="">Welcome @User.Identity.Name</a>
+                            </li>
+
+                            @if (User.IsInRole("Admin") == true)
+                            {
+                                <li class="nav-item ms">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="AddRole">AddRole</a>
+                                </li>
+                            }
+
+                           
+
+
+                        }
+                        else
+                        {
+                            <li class="nav-item ms-auto">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                            </li>
+                            <li class="nav-item ms">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                            </li>
+                        }
+
+                        
+                       
                     </ul>
                 </div>
             </div>
